tools/98_maintenance/scripts/datalayer-api-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: datalayer-api
  namespace: ibm-concert-operate
spec:
  to:
    kind: Service
    name: aiops-ir-core-ncodl-api
    weight: 100
  port:
    targetPort: secure-port
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
  #host: datalayer-api.${CLUSTER_APPS_HOST}
